--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <!-- Bloc 1 : Réaliser -->
             <div
                     class="blocks__content realiser"
-                    data-title="Réaliser : Concrétiser un projet de A à Z"
+                    data-title="Réaliser"
                     data-objectives="Passer de la phase de conception à la mise en production d’une application complète, en respectant les contraintes techniques et fonctionnelles."
                     data-skills="• Analyser les besoins et définir un cahier des charges<br>
                • Développer le code source en respectant les bonnes pratiques<br>
@@ -482,7 +482,7 @@
 
             <!-- Bloc 6 : Collaborer -->
             <div class="blocks__content collaborer"
-                 data-title="Collaborer : Travia - Moteur de Recherche Galactique"
+                 data-title="Collaborer"
                  data-objectives="Rassembler les compétences d'une équipe de 4 pour concevoir un moteur de recherche innovant inspiré de Star Wars."
                  data-skills="• Travail collaboratif et répartition des rôles<br>• Utilisation d'un tableau RACI pour clarifier les responsabilités<br>• Développement multi-langages (PHP, Java, C)<br>• Intégration d'une base de données MySQL pour une gestion efficace des données"
                  data-project-title="Travia"
