grammar corrections and fixed block-skills descriptions

--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
             <div
                     class="blocks__content realiser"
                     data-title="Réaliser"
-                    data-objectives="Passer de la phase de conception à la mise en production d’une application complète, en respectant les contraintes techniques et fonctionnelles."
-                    data-skills="• Analyser les besoins et définir un cahier des charges<br>
-               • Développer le code source en respectant les bonnes pratiques<br>
-               • Mettre en place des tests unitaires et fonctionnels<br>
-               • Gérer le déploiement et la maintenance initiale"
+                    data-objectives="Partir des exigences et aller jusqu'à une application complète"
+                    data-skills="• Elaborer et implémenter les spécifications fonctionnelles et non fonctionnelles à partir des exigences<br>
+               • Appliquer les principes d'accessibilité et d'érgonomie<br>
+               • Adopter de bonnes pratiques de conception et de programmation<br>
+               • Vérifier et valider la qualitré de l'application par les tests"
                     data-project-title="Harmoneyca"
                     data-project-img="assets/img/Banque.png"
-                    data-project-desc="Issu d'une collaboration entre 5 experts, ce portail bancaire incarne notre capacité à 'Réaliser' un projet ambitieux. En adoptant une approche Agile Scrum avec des cycles de sprints réguliers, nous avons orchestré le développement de manière itérative et structurée. Harmoneyca est une plateforme web innovante qui simplifie la gestion financière. Son tableau de bord intuitif permet de suivre en temps réel impayés, trésorerie et historique des transactions. Conçue pour être ergonomique et responsive, elle intègre des outils d’analyse facilitant la prise de décision tout en garantissant sécurité et performance. "
+                    data-project-desc="Issu d'une collaboration entre 5 élèves, ce portail bancaire incarne notre capacité à 'Réaliser' un projet ambitieux. En adoptant une approche Agile Scrum avec des cycles de sprints réguliers, nous avons orchestré le développement de manière itérative et structurée. Harmoneyca est une plateforme web innovante qui simplifie la gestion financière. Son tableau de bord intuitif permet de suivre en temps réel impayés, trésorerie et historique des transactions. Conçue pour être ergonomique et responsive, elle intègre des outils d’analyse facilitant la prise de décision tout en garantissant sécurité et performance. "
             >
               <h3 class="blocks__title">Réaliser</h3>
               <p class="blocks__description">
@@ -406,8 +406,11 @@
             <!-- Bloc 2 : Optimiser -->
             <div class="blocks__content optimiser"
                  data-title="Optimiser"
-                 data-objectives="Utiliser l'algorithme NEAT pour optimiser l'apprentissage d'une IA qui maîtrise Flappy Bird."
-                 data-skills="• Implémentation de NEAT en Python<br>• Évolution des réseaux neuronaux<br>• Simulation de parties et apprentissage par récompense<br>• Analyse des performances et ajustements dynamiques"
+                 data-objectives="Sélectionner les algorithmes adéquats pour répondre à un problème donné."
+                 data-skills="• Choisir des structures de données complexes adaptées au problème<br>
+                 • Utiliser des techniques algorithmiques adaptées pour des problèmes complexes<br>
+                 • Comprendre les enjeux et moyens de sécurisation des données et du code<br>
+                 • Evaluer l'impact environnemental et sociétal des solutions proposées"
                  data-project-title="IA Flappy Bird avec NEAT"
                  data-project-img="assets/img/flappy.png"
                  data-project-desc="Dans ce projet, j'ai développé une intelligence artificielle capable d'apprendre à jouer à Flappy Bird en utilisant l'algorithme NEAT (NeuroEvolution of Augmenting Topologies). NEAT est une méthode d'évolution génétique qui optimise simultanément la structure et les poids des réseaux neuronaux. En partant d'un réseau minimal, l'algorithme introduit progressivement de nouvelles connexions et de nouveaux nœuds via des mutations et des croisements, permettant aux réseaux de se complexifier en fonction de la difficulté du jeu. Chaque génération est évaluée sur la base du score obtenu, et les réseaux les plus performants sont sélectionnés pour évoluer vers des modèles toujours plus robustes. Ce processus itératif d'apprentissage par renforcement démontre comment l'optimisation évolutive peut transformer des approches simples en solutions performantes dans des environnements dynamiques."
@@ -425,8 +428,10 @@
             <!-- Bloc 3 : Administrer -->
             <div class="blocks__content administrer"
                  data-title="Administrer"
-                 data-objectives="Mettre en place et configurer un serveur DNS opérationnel, et comprendre la résolution de noms dans un réseau."
-                 data-skills="• Installation et configuration d’un serveur DNS<br>• Compréhension du protocole DNS et des zones de résolution<br>• Sécurisation et maintenance d’un service réseau critique<br>• Analyse des performances et dépannage"
+                 data-objectives="Déployer des services dans une architecture réseau."
+                 data-skills="• Concevoir et développer des applications communicantes<br>
+                 • Utiliser des serveurs et des services réseaux virtualisés<br>
+                 • Sécuriser les services et données d'un système"
                  data-project-title="TP Serveur DNS"
                  data-project-img="assets/img/dnsServ.jpg"
                  data-project-desc="Ce TP noté, réalisé en classe, nous a permis de mettre en place un serveur DNS afin de traduire les noms de domaine en adresses IP. L'exercice nous a familiarisé avec la configuration des zones DNS, la gestion des enregistrements et l'importance de ce service dans l'infrastructure réseau."
@@ -444,8 +449,11 @@
             <!-- Bloc 4 : Gérer -->
             <div class="blocks__content gerer"
                  data-title="Gérer"
-                 data-objectives="Optimiser la gestion des entités critiques du système, des comptes aux réservations, en passant par la coordination des trajets."
-                 data-skills="• Gestion des utilisateurs et des comptes<br>• Administration des réservations et billets<br>• Coordination des trains et trajets<br>• Intégration de React avec MongoDB pour une scalabilité efficace"
+                 data-objectives="Optimiser une base de données, intéragir avec une application et mettre en oeuvre la sécurité."
+                 data-skills="• Optimiser les modèles de l'entreprise<br>
+                 • Assumer la sécurité des données<br>
+                 • Organiser la restitution de données à travers la programmation et la visualisation<br>
+                 • Manipuler des données hétérogènes"
                  data-project-title="SwiftRail"
                  data-project-img="assets/img/train.png"
                  data-project-desc="SwiftRail est un projet innovant de réservation de trains, permettant une gestion complète des opérations ferroviaires. Conçu en React et alimenté par MongoDB, il offre une interface intuitive pour gérer utilisateurs, réservations et billets, tout en garantissant performance et flexibilité."
@@ -463,8 +471,11 @@
             <!-- Bloc 5 : Conduire -->
             <div class="blocks__content conduire"
                  data-title="Conduire"
-                 data-objectives="Planifier et piloter un projet complexe à l'aide d'outils tels que le WBS et le Gantt."
-                 data-skills="• Élaboration d'un WBS complet<br>• Réalisation d'un diagramme de Gantt<br>• Prévisions et gestion des risques<br>• Suivi de projet détaillé"
+                 data-objectives="Appliquer une démarche de suivi de projet en fonction des besoins métiers des clients et des utilisateurs."
+                 data-skills="• Identifier les processus présents dans une organis  tion en vue d'améliorer les systèmes d'information<br>
+                 • Formaliser les besoins du client et de l'utilisateur<br>
+                 • Identifier les critères de faisabilité d'un projet informatique<br>
+                 • Définir et mettre en oeuvre une démarche de suivi de projet"
                  data-project-title="Examen de Gestion de Projet"
                  data-project-img="assets/img/gestion.png"
                  data-project-desc="Dans le cadre d'un cours de Gestion de projet, j'ai réalisé un devoir complet comprenant un WBS, un Gantt, et des prévisions détaillées. Ce travail, noté 19/20, démontre une excellente maîtrise de la gestion de projet."
@@ -483,8 +494,11 @@
             <!-- Bloc 6 : Collaborer -->
             <div class="blocks__content collaborer"
                  data-title="Collaborer"
-                 data-objectives="Rassembler les compétences d'une équipe de 4 pour concevoir un moteur de recherche innovant inspiré de Star Wars."
-                 data-skills="• Travail collaboratif et répartition des rôles<br>• Utilisation d'un tableau RACI pour clarifier les responsabilités<br>• Développement multi-langages (PHP, Java, C)<br>• Intégration d'une base de données MySQL pour une gestion efficace des données"
+                 data-objectives="Situer son rôle et ses missions au sein d'une équipe informatique"
+                 data-skills="• Comprendre la diversité, la structure et la dimension de l'informatique d'une organisation<br>
+                 • Appliquer une démarche pour intégrer une équipe informatique au sein d'une organisation <br>
+                 • Mobiliser les compétences interpersonnelles pour travailler dans une équipe informatique<br>
+                 • Rendre compte de son activité professionnelle"
                  data-project-title="Travia"
                  data-project-img="assets/img/TraviaTemp.png"
                  data-project-desc="Travia est un moteur de recherche galactique permettant à un voyageur de se déplacer entre planètes en empruntant le chemin le plus court grâce à l'algorithme A*. Réalisé en groupe de 4, ce projet a mis en lumière l'importance de la collaboration et d'une répartition claire des tâches via un tableau RACI."
