fixed little details

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                  • Définir et mettre en oeuvre une démarche de suivi de projet"
                  data-project-title="Examen de Gestion de Projet"
                  data-project-img="assets/img/gestion.png"
-                 data-project-desc="Dans le cadre d'un cours de Gestion de projet, j'ai réalisé un devoir complet comprenant un WBS, un Gantt, et des prévisions détaillées. Ce travail, noté 19/20, démontre une excellente maîtrise de la gestion de projet."
+                 data-project-desc="Dans le cadre d'un cours de Gestion de projet, j'ai réalisé un devoir complet comprenant un WBS, un Gantt, et des prévisions détaillées. Ce travail, démontre une capacité acquise à gérer et conduire un projet."
                  data-download="assets/pdf/TD2_ManagementSI_RAKOTONIARY_BUT2info.pdf"
             >
               <h3 class="blocks__title">Conduire</h3>
