redirected the github icon to the good profile

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </a>
 
               <a
-                href="https://github.com/"
+                href="https://github.com/loic1805"
                 target="_blank"
                 class="home__social-icon"
               >
